# Walicia

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Source/: walicia.cpp  walicia.h  walicia_control.h  wallicia.cpp  wallicia.h  wallicia_control.h
imgui/: imconfig.h  imfilebrowser.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_singularityengine.cpp  imgui_impl_singularityengine.h
